[package]
name = "sentinel-rs"
version = "0.0.0"
authors = ["Alex Beregszaszi <alex@rtfs.hu>"]
repository = "https://github.com/ewasm/sentinel-rs"
homepage = "https://github.com/ewasm/sentinel-rs"
license = "Apache-2.0"
readme = "README.md"
description = "Validator and metering injector for eWASM."
keywords = ["ewasm"]
publish = false

[dependencies]
ewasm_api = "0.5"
pwasm-utils = { path = "wasm-utils" }
parity-wasm = "0.31"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
